Criado Dominio Para Plataforma
03/11 e 05/11

--- a/jogos.Ecommerce.Web/Views/FichaTecnica/Details.cshtml
+++ b/jogos.Ecommerce.Web/Views/FichaTecnica/Details.cshtml
@@ -43,11 +43,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Plataforma)
+            @Html.DisplayNameFor(model => model.IdPlataforma)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Plataforma)
+            @Html.DisplayFor(model => model.IdPlataforma)
         </dd>
 
         <dt>
