--- a/jogos.Ecommerce.Web/Views/FichaTecnica/Index.cshtml
+++ b/jogos.Ecommerce.Web/Views/FichaTecnica/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayNameFor(model => model.AnoLancamento)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Plataforma)
+                @Html.DisplayNameFor(model => model.IdPlataforma)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Genero)
@@ -67,7 +67,7 @@
                     @Html.DisplayFor(modelItem => item.AnoLancamento)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Plataforma)
+                    @Html.DisplayFor(modelItem => item.IdPlataforma)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Genero)
