--- a/jogos.Ecommerce.Web/Views/FichaTecnica/Delete.cshtml
+++ b/jogos.Ecommerce.Web/Views/FichaTecnica/Delete.cshtml
@@ -44,11 +44,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Plataforma)
+            @Html.DisplayNameFor(model => model.IdPlataforma)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Plataforma)
+            @Html.DisplayFor(model => model.IdPlataforma)
         </dd>
 
         <dt>
