--- a/jogos.Ecommerce.Web/Views/FichaTecnica/Edit.cshtml
+++ b/jogos.Ecommerce.Web/Views/FichaTecnica/Edit.cshtml
@@ -49,10 +49,10 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Plataforma, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.IdPlataforma, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Plataforma, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Plataforma, "", new { @class = "text-danger" })
+            @Html.DropDownListFor(model => model.IdPlataforma, (SelectList)ViewBag.DropDownPlataformas, new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.IdPlataforma, "", new { @class = "text-danger" })
         </div>
     </div>
 
