--- a/jogos.Ecommerce.Web/Views/Shared/_Layout.cshtml
+++ b/jogos.Ecommerce.Web/Views/Shared/_Layout.cshtml
@@ -25,6 +25,16 @@
                     <li>@Html.ActionLink("Sobre", "About", "Home")</li>
                     <li>@Html.ActionLink("Contato", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Ficha Tecnica","Index","FichaTecnica")</li>
+                    @if (Request.IsAuthenticated)
+                    {
+                        <li><p>Olá, @User.Identity.Name</p></li>
+                        
+                        <li>@Html.ActionLink("Fazer Logoff", "Logoff", "Usuarios")</li>
+
+                    }
+                    else{
+                        <li>@Html.ActionLink("Fazer Login", "Login", "Usuarios")</li>
+                    }
                 </ul>
             </div>
         </div>
